samples/_failures_safe/1761495208_61b7cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20ef6653.c: In function ‘main’:
./samples/SAFE/__tmp_20ef6653.c:155:18: error: expected ‘;’ at end of input
  155 |         input_len
      |                  ^
      |                  ;
./samples/SAFE/__tmp_20ef6653.c:155:9: error: expected declaration or statement at end of input
  155 |         input_len
      |         ^~~~~~~~~
./samples/SAFE/__tmp_20ef6653.c:155:9: error: expected declaration or statement at end of input
